fixed btn position to reduce margin gap right

--- a/styles/addTask.css
+++ b/styles/addTask.css
@@ -4,6 +4,7 @@ body {
   background-color: rgb(246, 247, 248);
   height: 100%;
   box-sizing: border-box;
+  overflow: auto;
  }
 
  form {
