--- a/styles/addTaskMedia.css
+++ b/styles/addTaskMedia.css
@@ -70,7 +70,6 @@
 }
 
 @media (max-width: 1140px) and (min-width: 1025px) {
-
     .addTaskWrapper {
         flex-direction: column;
         align-items: center;
@@ -86,8 +85,8 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        padding: 20px;
         margin: 0 auto;
+        padding: 0;
     }
 
     .inputFlexbox {
@@ -119,6 +118,10 @@
 
     .addOrClear {
        margin-left: 25px;
+    }
+
+    .addOrClearBtn {
+        margin-right: 85px;
     }
 
     .required-icon {
